--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
+.button {
+    justify-self: center;
+    align-self: center;
+}
+
 .container {
-    max-width: 200px;
+    width: 750px;
+    height: 750px;
     justify-self: center;
     display: flex;
     flex-wrap: wrap;
+    border: 1px solid black;
 }
-
 .box {
-    width: 50px;
-    height: 50px;
+    width: 187.5px;
+    height: 187.5px;
     border: 1px black;
 }
+
