--- a/style.css
+++ b/style.css
@@ -1,19 +1,24 @@
-/*body {
+body {
   display: flex;
   flex-direction: column;
   margin: 0
 }
-  */
+
 
 .meta-container {
     display: flex;
+    background-color:aquamarine;
+    flex-direction: column;
 }
 
 .title-div {
     display:flex;
     justify-content: center;
     font-size: 46px;
-    padding: 16px;
+    padding-top: 8px;
+    padding-left: 16px;
+    padding-bottom: 16px;
+    padding-right: 16px;
 }
 
 .sketch-div {
