--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
   display: flex;
   flex-direction: column;
-  margin: 0
+  margin: 0;
+  background-color: #D4F0F0;
 }
 
 
 .meta-container {
     display: flex;
-    background-color:aquamarine;
+    background-color: #D4F0F0;
     flex-direction: column;
 }
 
@@ -19,6 +20,7 @@ body {
     padding-left: 16px;
     padding-bottom: 16px;
     padding-right: 16px;
+    font-family: "Ludica Console", "Courier New", monospace;
 }
 
 .sketch-div {
@@ -50,5 +52,4 @@ body {
     display: flex;
     margin: 16px 0px;
     padding: 8px 24px;
-    
 }
